<resources>
    <string name="app_name">taskmaster</string>
    <string name="MyTasks">My Tasks</string>
    <string name="AddTask">Add Task</string>
    <string name="AllTasks">All Tasks</string>
    <string name="MyTask">My Task</string>
    <string name="TaskTitle">Task Title</string>
    <string name="DoSomething">Do Something</string>
    <string name="TotalTasks">Total Tasks: 0</string>
    <string name="TaskDescription">Task Description</string>
    <string name="submitted">submitted!</string>
    <string name="taskDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="finishTheLab">Finish The Lab</string>
    <string name="viewTask">View Task</string>
    <string name="doTheCodeChallenge">Do The Code Challenge</string>
    <string name="finishReadingNotes">Finish the Reading Notes</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="settingsSaved">Settings Saved!</string>
    <string name="WelcomeUsername">%1$s\'s Tasks</string>
    <string name="TaskStatus">Task Status</string>
    <string name="TaskDate">Task Date</string>
    <string name="DateAdded">Date Added</string>
    <string name="Team">Team</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="verifyEmail">Verify Email</string>
    <string name="email">Email</string>
    <string name="verificationCode">Verification Code</string>
    <string name="logout">Logout</string>
    <string name="signUpHere">Sign Up Here</string>
</resources>